--- a/styles.less
+++ b/styles.less
@@ -1,4 +1,4 @@
-.header {
+body .header {
     text-align: center;
 }
 
@@ -24,7 +24,7 @@
     .slides {
         display: flex;
 
-        transition: 1s all;
+        transition: 2s all;
 
         .slide {
             width     : 600px;
