--- a/styles.less
+++ b/styles.less
@@ -4,8 +4,8 @@ body .header {
 
 
 .container {
-    width        : 600px;
-    height       : 600px;
+    width        : 500px;
+    height       : 400px;
     border       : 1px solid black;
     display      : flex;
     margin-left  : auto;
@@ -14,11 +14,14 @@ body .header {
     margin-bottom: auto;
 }
 
+.control {
+    flex-basis: 50px;
+}
 
 
 .slide-container {
-    width   : 600px;
-    height  : 600px;
+    width   : 400px;
+    height  : 400px;
     overflow: hidden;
 
     .slides {
@@ -27,9 +30,19 @@ body .header {
         transition: 5s all;
 
         .slide {
-            width     : 600px;
-            height    : 600px;
+            width     : 400px;
+            height    : 400px;
             object-fit: cover;
         }
     }
+}
+
+footer {
+    width           : 500px;
+    padding         : 3px;
+    background-color: lightblue;
+    color           : white;
+    margin-left     : auto;
+    margin-right    : auto;
+
 }
