--- a/styles.less
+++ b/styles.less
@@ -46,3 +46,59 @@ footer {
     margin-right    : auto;
 
 }
+
+
+@media only screen and (max-width: 450px) {
+    body {
+        background: lightblue;
+    }
+
+    body .header {
+        text-align: center;
+    }
+
+
+    .container {
+        width        : 300px;
+        height       : 200px;
+        border       : 1px solid black;
+        display      : flex;
+        margin-left  : auto;
+        margin-right : auto;
+        margin-top   : auto;
+        margin-bottom: auto;
+    }
+
+    .control {
+        flex-basis: 50px;
+    }
+
+
+    .slide-container {
+        width   : 200px;
+        height  : 200px;
+        overflow: hidden;
+
+        .slides {
+            display: flex;
+
+            transition: 4s all;
+
+            .slide {
+                width     : 200px;
+                height    : 200px;
+                object-fit: cover;
+            }
+        }
+    }
+
+    footer {
+        width           : 300px;
+        padding         : 3px;
+        background-color: lightblue;
+        color           : white;
+        margin-left     : auto;
+        margin-right    : auto;
+
+    }
+}
